# examples

./: README.md
API/: Readme.md
API/CreditsCPlusPlusDemoCMake/: CMakeLists.txt  README.md  ac.h  build64.cmd  build64.sh  clean.cmd  clean.sh  client.cpp  client.h  keys.cpp  keys.h  main.cpp
API/CreditsCPlusPlusDemoCMake/ed25519/: CMakeLists.txt
API/CreditsCPlusPlusDemoCMake/ed25519/src/: seed.c
API/CreditsCSharpDemo/: Client.cs  CreditsCSAPIDemo.csproj  Keys.cs  Program.cs  README.md  build-linux.sh  clean.cmd  clean.sh
API/CreditsCSharpDemo/Properties/: launchSettings.json
API/CreditsHighLevelAPI/: Readme.md
API/CreditsHighLevelAPI/Client/: CMakeLists.txt  build64.cmd  clean.cmd  clean.sh  client.cpp  client.h  main.cpp  runme.cmd
API/CreditsHighLevelAPI/Server/: CMakeLists.txt  ac.cpp  build64.cmd  build64.sh  clean.cmd  clean.sh  client.cpp  client.h  keys.cpp  runme.cmd  runme.sh  server.cpp
API/CreditsHighLevelAPI/Server/common/: variant_aux.cpp
API/CreditsHighLevelAPI/thrift/: hlapi.thrift
API/CreditsJSDemo/: README.md  Util.js  base58.js  build.cmd  build.sh  clean.cmd  clean.sh  index.html
API/CreditsJSDemo/api/: API.js  api_types.js
API/CreditsJSDemo/general/: general_types.js
API/CreditsPythonApiDemo/: README.md  app.py  build-linux.sh  build-windows.cmd  clean.cmd  clientex.py  keys.py  runme.cmd  runme.sh  transfer.py
API/CreditsRestApiCSharpDemo/: CreditsRestApiCSharpDemo.csproj  Program.cs  Readme.md  Startup.cs  build-windows.cmd  clean.cmd  clean.sh
API/CreditsRestApiCSharpDemo/Controllers/: CreditsController.cs
API/CreditsRestApiCSharpDemo/Properties/: launchSettings.json
API/capi/: pom.xml
API/capi/src/main/java/com/credits/: DemoApplication.java
API/capi/src/main/java/com/credits/model/: DataResponseApiModel.java  RequestApiModel.java  ResponseApiModel.java
API/capi/src/main/java/com/credits/rest/: CreditsRestController.java
API/capi/src/main/java/com/credits/utils/: Base58.java  ConverterException.java  CreditsException.java  CryptoException.java  Ed25519.java
API/capi/src/test/java/com/credits/: DemoApplicationTests.java
Docker/: Readme.md
Docker/credits_docker_mainnet/: Readme.md  build.sh  run.sh
Docker/credits_docker_mainnet/common/: clean_main_db.sh  clean_main_keys.sh  run.sh
Docker/credits_docker_mainnet/source/: runner.cpp
Docker/credits_docker_testnet/: Readme.md  build.sh  clean.sh  run.sh
Docker/credits_docker_testnet/common/: clean_test_db.sh  clean_test_keys.sh  run.sh
Docker/credits_docker_testnet/source/: runner.cpp
SmartContracts/: Readme.md  Smart-kontrakt_Birzhevoj_aukcion.java  Smart-kotrakt_Birzhevoj_aukcion.java  sm_user_list.java
SmartContracts/sm_tracking the movement/: Readme.md  sm_tracking the movement.java
Utils/: Readme.md
Utils/cr-dev-book-windows/: Readme.md  index.js  package.json
Utils/cr-monitor-windows/: Readme.md  index.js  package.json
Utils/cr-web-wallet-windows/: Readme.md  index.js  package.json
